# hiACEJS

./: .gitignore  CMakeLists.txt  README.md
src/: .gn  BUILD.gn  CMakeLists.txt  hiacejs.pc.in
src/appagent/: CMakeLists.txt  appagent
src/appagent/src/: main.cpp
src/base/security/frameworks/crypto_lite/: readme.md
src/base/security/frameworks/crypto_lite/cipher/: BUILD.gn
src/base/security/frameworks/crypto_lite/cipher/include/: hicipher.h
src/base/security/frameworks/crypto_lite/cipher/src/: cipher_aes.c  cipher_rsa.c
src/base/security/frameworks/crypto_lite/js/builtin/: BUILD.gn
src/base/security/frameworks/crypto_lite/js/builtin/src/: cipher_module.cpp
src/base/startup/frameworks/syspara_lite/parameter/src/: parameter_common.c
src/base/startup/hals/syspara_lite/: hal_sys_param.h
src/foundation/aafwk/frameworks/ability_lite/: BUILD.gn  README.md
src/foundation/aafwk/frameworks/ability_lite/example/: BUILD.gn  README.md  config.json
src/foundation/aafwk/frameworks/ability_lite/src/: ability.cpp  ability_event_handler.cpp  ability_loader.cpp
src/foundation/aafwk/interfaces/kits/ability_lite/: ability.h  ability_env.h  ability_event_handler.h  ability_loader.h
src/foundation/aafwk/services/abilitymgr_lite/: README.md
src/foundation/aafwk/services/abilitymgr_lite/include/: page_ability_record.h
src/foundation/aafwk/services/abilitymgr_lite/include/client/: ability_thread_client.h
src/foundation/aafwk/services/abilitymgr_lite/src/: ability_mission_record.cpp  ability_stack_manager.cpp  app_manager.cpp  app_record.cpp  page_ability_record.cpp
src/foundation/aafwk/services/abilitymgr_lite/src/client/: ability_thread_client.cpp  app_spawn_client.cpp
src/foundation/aafwk/services/abilitymgr_lite/src/task/: ability_connect_task.cpp  ability_start_task.cpp  app_restart_task.cpp  app_terminate_task.cpp
src/foundation/aafwk/services/abilitymgr_lite/tools/: README.md
src/foundation/ace/frameworks/lite/: BUILD.gn  CMakeLists.txt
src/foundation/ace/frameworks/lite/src/core/animation/: transition_impl.cpp
src/foundation/ace/frameworks/lite/src/core/modules/: ohos_module_config.h
src/foundation/ace/frameworks/lite/targets/hybridos/: acelite_config.h  hi_ace_js.cpp  hi_ace_js.h  hibus_handler_list.cpp  hibus_handler_list.h  hibus_wrapper.cpp  hibus_wrapper.h  hybridos_input_device.cpp  hybridos_input_device.h  hybridos_proxy_window.cpp  hybridos_proxy_window.h  hybridos_proxy_windows_manager.cpp  hybridos_proxy_windows_manager.h  hybridos_surface.cpp  hybridos_surface.h  hybridos_windows_manager.cpp
src/foundation/ace/interfaces/innerkits/builtin/: readme.md
src/foundation/appexecfwk/interfaces/kits/bundle_lite/: install_param.h
src/foundation/appexecfwk/services/bundlemgr_lite/bundle_daemon/include/: bundle_daemon_handler.h
src/foundation/appexecfwk/services/bundlemgr_lite/bundle_daemon/src/: bundle_daemon_handler.cpp
src/foundation/appexecfwk/services/bundlemgr_lite/include/: bundle_common.h  bundle_extractor.h  bundle_installer.h  bundle_manager_service.h  bundle_map.h  bundle_parser.h  bundle_util.h  extractor_util.h  gt_bundle_extractor.h  gt_bundle_installer.h  gt_bundle_manager_service.h  gt_bundle_parser.h  gt_extractor_util.h  hap_sign_verify.h  zip_file.h
src/foundation/appexecfwk/services/bundlemgr_lite/src/: bundle_map.cpp
src/foundation/appexecfwk/utils/bundle_lite/: readme.md
src/foundation/graphic/lite/: readme.md
src/foundation/graphic/lite/frameworks/surface/: BUILD.gn
src/foundation/graphic/lite/frameworks/surface/src/: buffer_queue.cpp
src/foundation/graphic/lite/frameworks/ui/: BUILD.gn
src/foundation/graphic/lite/frameworks/ui/include/core/: render_manager.h
src/foundation/graphic/lite/frameworks/ui/src/animator/: animator.cpp
src/foundation/graphic/lite/frameworks/ui/src/common/: graphic_startup.cpp  input_device_manager.cpp  task.cpp  text.cpp
src/foundation/graphic/lite/frameworks/ui/src/components/: root_view.cpp  ui_box_progress.cpp  ui_image_view.cpp
src/foundation/graphic/lite/frameworks/ui/src/core/: render_manager.cpp  task_manager.cpp
src/foundation/graphic/lite/frameworks/ui/src/dock/: pointer_input_device.cpp
src/foundation/graphic/lite/frameworks/ui/src/draw/: draw_curve.cpp  draw_image.cpp  draw_line.cpp  draw_rect.cpp  draw_triangle.cpp  draw_utils.cpp
src/foundation/graphic/lite/frameworks/ui/src/window/: iwindows_manager.cpp
src/foundation/graphic/lite/hals/: BUILD.gn
src/foundation/graphic/lite/interfaces/innerkits/ui/common/: input_device_manager.h  screen_device_proxy.h  task_manager.h
src/foundation/graphic/lite/interfaces/kits/config/: graphic_config.h
src/foundation/graphic/lite/interfaces/kits/ui/common/: task.h
src/foundation/graphic/lite/interfaces/kits/utils/: file.h
src/foundation/graphic/lite/services/ims/: BUILD.gn
src/foundation/graphic/lite/utils/: BUILD.gn
src/hiacejs_run/: CMakeLists.txt  hiacejs_run
src/hiacejs_run/src/: CMakeLists.txt  main.c
src/kernel/liteos_a/tools/scripts/make_rootfs/: rootfsimg.sh
src/utils/native/lite/: readme.md
src/utils/native/lite/appexecfwk/: nocopyable.h
src/utils/native/lite/file/src/file_impl_hal/: file.c
src/utils/native/lite/hals/file/: hal_file.h
src/utils/native/lite/hilog/: BUILD.gn  log.c  log.h
src/utils/native/lite/include/: utils_file.h
src/utils/native/lite/js/builtin/: BUILD.gn
src/utils/native/lite/js/builtin/common/: BUILD.gn
src/utils/native/lite/js/builtin/deviceinfokit/: BUILD.gn
src/utils/native/lite/js/builtin/filekit/: BUILD.gn
src/utils/native/lite/js/builtin/kvstorekit/: BUILD.gn
src/utils/native/lite/kal/timer/: BUILD.gn
src/utils/native/lite/kal/timer/include/: kal.h
src/utils/native/lite/kal/timer/src/: kal.c
src/utils/native/lite/kv_store/src/kvstore_common/: kvstore_common.c
src/utils/native/lite/kv_store/src/kvstore_impl_posix/: kv_store.c
src/utils/native/lite/timer_task/: BUILD.gn
src/utils/native/lite/timer_task/include/: nativeapi_timer_task.h
src/utils/native/lite/timer_task/src/: nativeapi_timer_task.c
test/src/: CMakeLists.txt  main.c
(+108 files in other folders)
