# Copyright (c) 2020 FMSoft.

shared_library("ability_shared") {
  cflags = [
    "-Wall",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]
  cflags_cc = cflags

  sources = [
    "src/ability.cpp",
    "src/ability_env.cpp",
    "src/ability_env_impl.cpp",
    "src/ability_event_handler.cpp",
    "src/ability_loader.cpp",
  ]

  public_deps = [
    "//utils/native/lite/hilog:hilog_shared",
  ]

  include_dirs = [
    "//foundation/aafwk/interfaces/kits/ability_lite",
    "//foundation/graphic/lite/interfaces/kits/config",
    "//foundation/graphic/lite/interfaces/kits/ui",
    "//foundation/graphic/lite/interfaces/kits/utils",
    "//utils/native/lite/appexecfwk",
    "//utils/native/lite/hilog",
    "include",
  ]
}
